# video_subtitle

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FAQ.md  LICENSE  MCP.md  README.md  pyproject.toml  requirements.txt  video_subtitle.py  斜杠命令.md
