[project]
name = "video_subtitle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio==4.12.1",
    "av==16.1.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "ctranslate2==4.6.3",
    "faster-whisper==1.2.1",
    "filelock==3.20.3",
    "flatbuffers==25.12.19",
    "fsspec==2026.1.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.3.5",
    "humanfriendly==10.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "onnxruntime==1.23.2",
    "packaging==26.0",
    "pandas==3.0.0",
    "pefile==2024.8.26",
    "pillow==12.0.0",
    "protobuf==6.33.5",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "setuptools==80.10.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.13.1",
    "tokenizers==0.22.2",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tqdm==4.67.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
index-strategy = "unsafe-best-match"